add swagger documentation for cpu info
